# HummingbirdVision

./: .gitignore  Predictions.ipynb  README.md  Training.ipynb  Validation.ipynb  environment.yml  pyproject.toml  requirements.txt
Notebooks/: Predictions.ipynb  Validation.ipynb
data/: README.md
model_weights/: README.md
src/backend/: __init__.py  model.py  model_config.py  pipeline.py  postprocessor.py  preprocessor.py  processor.py  util.py
