[build-system]
requires    = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "backend"
version         = "0.1.0"
description     = "Backend for the HFW video inference"
readme          = "README.md"
requires-python = ">=3.9"
authors = [
  { name="David Beeson", email="db0197@princeton.edu" },
]
dependencies = [
  "opencv_python>=4.11.0.86",
  "pandas>=2.2.3",
  "torchvision>=0.22.0",
  "ultralytics>=8.3.141"
]

[tool.setuptools.packages.find]
where = ["src"]

